Adding image generation tools. Adding image resources.